--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "xiot-spec-ts",
-  "version": "0.0.3",
+  "version": "0.0.6",
   "description": "XIOT Specification Codec",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p src",
+    "build": "tsc",
     "clean": "rm -fr dist",
     "test": "./node_modules/.bin/mocha -r ./node_modules/ts-node/register test/**/*.spec.ts",
     "lint": "tslint"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jxfengzi/xiot-spec-ts.git"
+    "url": "git+https://github.com/gkcity/xiot-spec-ts.git"
   },
   "keywords": [
     "xiot",
     "spec"
   ],
-  "author": "Ouyang Chengfeng <jxfengzi@gmail.com> (http://github.com/jxfengzi)",
+  "author": "gkcity <178915185@gmail.com> (http://github.com/gkcity)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jxfengzi/xiot-spec-ts/issues"
+    "url": "https://github.com/gkcity/xiot-spec-ts/issues"
   },
-  "homepage": "https://github.com/jxfengzi/xiot-spec-ts#readme",
+  "homepage": "https://github.com/gkcity/xiot-spec-ts#readme",
   "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.1.2",
@@ -32,7 +33,7 @@
     "mocha": "^5.0.1",
     "ts-node": "^4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "^2.5.3",
+    "typescript": "^3.1.6",
     "typings": "^2.1.1"
   }
 }
