--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "xiot-core-spec-ts",
-  "version": "0.6.6",
+  "version": "0.7.4",
   "description": "XIOT Specification Codec",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "clean": "rm -fr dist",
