--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ts-node": "^4.1.0",
     "tslint": "~5.9.1",
     "typescript": "^3.1.6",
-    "typings": "^2.1.1"
+    "typings": "^2.1.1",
+    "yajsondiff": "^2.0.0"
   }
 }
