--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xiot-core-spec-ts",
-  "version": "0.22.6",
+  "version": "0.22.17",
   "description": "XIOT Specification Codec",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -39,5 +39,8 @@
     "typescript": "^3.1.6",
     "typings": "^2.1.1",
     "yajsondiff": "^2.0.0"
-  }
+  },
+  "browser": {
+    "crypto": false
+}
 }
